[gd_scene load_steps=12 format=3 uid="uid://dl1ats46w0lqu"]

[ext_resource type="Script" path="res://scenes/levels/level3.gd" id="1_asvuo"]
[ext_resource type="PackedScene" uid="uid://cu1bmcpku7y8" path="res://ui/level_up_ui/level_up_ui.tscn" id="2_vehlo"]
[ext_resource type="PackedScene" uid="uid://b3n1p4voju61h" path="res://ui/pause_ui/pause_ui.tscn" id="3_vm7n3"]
[ext_resource type="PackedScene" uid="uid://dnp5omn5i604c" path="res://ui/game_over_ui/game_over_ui.tscn" id="4_16ai2"]
[ext_resource type="PackedScene" uid="uid://brrdps6u3goyu" path="res://ui/level_completed_ui/level_completed_ui.tscn" id="5_5g3jn"]
[ext_resource type="PackedScene" uid="uid://cgxyj8f7wq5dx" path="res://scenes/background/background.tscn" id="6_cg02w"]
[ext_resource type="PackedScene" uid="uid://elqqjnku0tdp" path="res://ui/final_blitz_warning_ui/final_blitz_warning_ui.tscn" id="6_w0hm8"]
[ext_resource type="PackedScene" uid="uid://ccjevfme2ltui" path="res://scenes/player/player.tscn" id="7_6odjk"]
[ext_resource type="PackedScene" uid="uid://dgciyrnwhkn2b" path="res://ui/xp_bar_ui/xp_bar_ui.tscn" id="8_ymjeu"]
[ext_resource type="PackedScene" uid="uid://dvvjn5b0g1bjb" path="res://ui/main_ui.tscn" id="9_ra33p"]
[ext_resource type="PackedScene" uid="uid://dx6qdr3clgtae" path="res://scenes/bosses/red_boss.tscn" id="11_rchu1"]

[node name="level3" type="Node"]
script = ExtResource("1_asvuo")

[node name="main_ui" parent="." instance=ExtResource("9_ra33p")]

[node name="level_up_ui" parent="." instance=ExtResource("2_vehlo")]

[node name="pause_ui" parent="." instance=ExtResource("3_vm7n3")]

[node name="game_over_ui" parent="." instance=ExtResource("4_16ai2")]

[node name="level_completed_ui" parent="." instance=ExtResource("5_5g3jn")]

[node name="final_blitz_warning_ui" parent="." instance=ExtResource("6_w0hm8")]

[node name="background" parent="." instance=ExtResource("6_cg02w")]
position = Vector2(-5, -13)

[node name="player" parent="." instance=ExtResource("7_6odjk")]
position = Vector2(350, 800)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="xp_bar_ui" parent="." instance=ExtResource("8_ymjeu")]
z_index = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 451)

[node name="HBEnemySpawner" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = -41.0
grow_horizontal = 2

[node name="EnemySpawner1" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(80, 0)

[node name="EnemySpawner2" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(160, 0)

[node name="EnemySpawner3" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(240, 0)

[node name="EnemySpawner4" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(320, 0)

[node name="EnemySpawner5" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(400, 0)

[node name="EnemySpawner6" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(480, 0)

[node name="EnemySpawner7" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(560, 0)

[node name="EnemySpawner8" type="Marker2D" parent="HBEnemySpawner"]
position = Vector2(640, 0)

[node name="HBEnemies" type="HBoxContainer" parent="." groups=["enemy_missed_hb"]]
offset_right = 40.0
offset_bottom = 40.0

[node name="FinalBlitzWarningTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="red_boss" parent="." instance=ExtResource("11_rchu1")]
position = Vector2(348, -325)

[node name="ScreenShakeTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="ScreenShakeTimer" to="." method="_on_screen_shake_timer_timeout"]
